--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <title>txt.js</title>
 </head>
 <body>
-    
+    <h1>todoTXT.js</h1>
+    <button>Log In</button>
+
+    <!-- Modal -->
+    <div>
+        <span></span>
+        <form class="" action="" method="post">
+            <div class="imgcontainer">
+                <span></span>
+                <img src="" alt="Avatar" class="avatar">
+            </div>
+
+            <div class="container">
+                <label for="username">Username</label>
+                <input type="text" placeholder="Enter Username" name="username" required>
+
+                <label for="password">Password</label>
+                <input type="text" name="password" required>
+
+                <button type="submit">Submit</button>
+                <label type="checkbox" checked="checked" name="remember">Remember me!</label>
+            </div>
+
+            <div class="container">
+                <button type="button" class="cancelBtn">Cancel</button>
+                <span class="psw">Forgot <a href="#">password?</a></span>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
