--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style src="styles/styles.css"></style>
+    <link rel="stylesheet" href="styles/styles.css">
     <script src="src/index.js"></script>
     <title>txt.js</title>
 </head>
 <body>
     <h1>todoTXT.js</h1>
-    <button>Log In</button>
+    <div id="center">
+        <button id="login">Log In</button>
+    </div>
 
     <!-- Modal -->
     <div>
         <span></span>
-        <form class="" action="" method="post">
+        <form class="modal-content animate" action="" method="post">
             <div class="imgcontainer">
-                <span></span>
+                <span class="close" title="Close modal">x</span>
                 <img src="" alt="Avatar" class="avatar">
             </div>
 
@@ -25,15 +27,17 @@
                 <input type="text" placeholder="Enter Username" name="username" required>
 
                 <label for="password">Password</label>
-                <input type="text" name="password" required>
+                <input type="text" placeholder="Enter Password" name="password" required>
 
                 <button type="submit">Submit</button>
-                <label type="checkbox" checked="checked" name="remember">Remember me!</label>
+                <label>
+                    <input type="checkbox" checked="checked" name="remember">Remember me!
+                </label>
             </div>
 
             <div class="container">
                 <button type="button" class="cancelBtn">Cancel</button>
-                <span class="psw">Forgot <a href="#">password?</a></span>
+                <span class="psw">Forgot <a href="#">password</a>?</span>
             </div>
         </form>
     </div>
