--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style src="styles/styles.css"></style>
-    <script src="src/index.js"></script>
+    <link rel="stylesheet" href="styles/styles.css">
     <title>txt.js</title>
 </head>
 <body>
     <h1>todoTXT.js</h1>
-    <button>Log In</button>
+    <button id="login" onclick="appearBtn()">Log In</button>
 
     <!-- Modal -->
-    <div>
-        <span></span>
+    <div id="modalContainer" class="hide">
+        <span onclick="closeBtn()" class="close"></span>
         <form class="" action="" method="post">
             <div class="imgcontainer">
                 <span></span>
@@ -32,10 +31,11 @@
             </div>
 
             <div class="container">
-                <button type="button" class="cancelBtn">Cancel</button>
+                <button type="button" class="cancelBtn" onclick="hideBtn()" >Cancel</button>
                 <span class="psw">Forgot <a href="#">password?</a></span>
             </div>
         </form>
     </div>
+<script src="src/index.js"></script>
 </body>
 </html>
