Add new user button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         <button id="login" onclick="appearBtn()">Log In</button>
     </div>
 
+    <div id="center">
+        <a href="pages/newUser.html">
+        <button type="button" id="newUser">Create account</button>
+        </a>
+    </div>
     <!-- Modal -->
+
     <div id="modalContainer" class="hide">
         <span onclick="closeBtn()" class="close"></span>
         <form class="modal-content animate" action="" method="post" id="form">
