Resolved reviewer comments

--- a/pages/newUser.html
+++ b/pages/newUser.html
@@ -8,8 +8,7 @@
     </head>
     <body>
     <h2 id="center">Create a new account</h2>
-    <div id="modalContainer" class="">
-        <span onclick="closeBtn()" class="close"></span>
+    <div id="modalContainer">
         <form class="modal-content" action="" method="post" id="form">
 
             <div class="container">
