Added default avatar image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <form class="modal-content animate" action="" method="post" id="form">
             <div class="imgcontainer">
                 <span class="close" title="Close modal">x</span>
-                <img src="" alt="Avatar" class="avatar">
+                    <img src="imgs/avatar-default.svg" alt="Avatar" class="avatar">
             </div>
 
             <div class="container">
