--- a/pages/newUser.html
+++ b/pages/newUser.html
@@ -24,9 +24,9 @@
                 <label for="password">Reconfirm Password</label>
                 <input type="password" placeholder="Reconfirm Password" name="password" id="password" required>
 
-                <button type="submit">Submit</button>
+                <button class="button" type="submit">Submit</button>
                 <a href="../index.html">
-                    <button type="button">Go back</button>
+                    <button class="button" type="button">Go back</button>
                 </a>
             </div>
 
