--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
 <body>
     <h1>todoTXT.js</h1>
     <div id="center">
-        <button id="login" onclick="appearBtn()">Log In</button>
+        <button class="button" id="login" onclick="appearBtn()">Log In</button>
     </div>
 
     <div id="center">
         <a href="pages/newUser.html">
-        <button type="button" id="newUser">Create account</button>
+        <button class="button" type="button" id="newUser">Create account</button>
         </a>
     </div>
     <!-- Modal -->
 
     <div id="modalContainer" class="hide">
-        <span onclick="closeBtn()" class="close"></span>
         <form class="modal-content animate" action="" method="post" id="form">
-            <div class="imgcontainer">
-                <span class="close" title="Close modal">x</span>
+            <div class="img-container">
+                <button id="closeX" class="close" onclick="closeBtn()" title="Close modal">x</button>
                     <img src="imgs/avatar-default.svg" alt="Avatar" class="avatar">
             </div>
 
@@ -32,18 +31,16 @@
                 <input type="text" placeholder="Enter Username" name="username" id="username" required>
 
                 <label for="password">Password</label>
-                <input type="text" placeholder="Enter Password" name="password" id="password" required>
+                <input type="password" placeholder="Enter Password" name="password" id="password" required>
+                <p class="psw">Forgot <a href="#">password</a>?</p>
 
-                <button type="submit">Submit</button>
+            </div>
+
+                <button class="button" type="submit">Submit</button>
                 <label>
                     <input type="checkbox" checked="checked" name="remember">Remember me!
                 </label>
-            </div>
-
-            <div class="container">
-                <button type="button" class="cancelBtn" onclick="hideBtn()" >Cancel</button>
-                <span class="psw">Forgot <a href="#">password</a>?</span>
-            </div>
+                <button type="button" class="button" onclick="hideBtn()" >Cancel</button>
         </form>
     </div>
     <script src="src/index.js"></script>
