--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="center">
         <a href="pages/newUser.html">
-        <button class="button" type="button" id="newUser">Create account</button>
+        <button class="button" type="button" id="new-user">Create account</button>
         </a>
     </div>
     <!-- Modal -->
