--- a/pages/newUser.html
+++ b/pages/newUser.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Create Account</title>
-        <link href="../styles/styles.css" rel="stylesheet">
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Create Account</title>
+    <link href="../styles/styles.css" rel="stylesheet">
+</head>
+
+<body>
     <h2 id="center">Create a new account</h2>
     <div id="modalContainer">
-        <form class="modal-content" action="" method="post" id="form">
+        <form class="modal-content" id="form" method="post">
 
             <div class="container">
                 <label for="username">Email</label>
-                <input type="text" placeholder="Enter Email" name="email" id="email" required>
+                <input type="text" placeholder="example@mail.com" name="email" id="email" pattern=".+@.+\.com"
+                    title="Must have an @ sign and a .com domain" required>
 
                 <label for="username">Username</label>
-                <input type="text" placeholder="Enter Username" name="username" id="username" required>
+                <input type="text" placeholder="Enter Username" name="username" id="username"
+                    minlength="8"
+                    maxlength="30"
+                    title="Must have from 8 to 30 characters"
+                    required>
 
                 <label for="password">Password</label>
-                <input type="password" placeholder="Enter Password" name="password" id="password" required>
+                <input type="password" placeholder="Enter Password" name="password" id="password"
+                    minlength="8"
+                    pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?!.* ).{6,}$"
+                    title="Must have at least 6 characters, at least one upper case letter, at least one lower case letter, at least one number and one symbol"
+                    onchange="matchPassword()"
+                    required>
 
                 <label for="password">Reconfirm Password</label>
-                <input type="password" placeholder="Reconfirm Password" name="password" id="password" required>
+                <input type="password" placeholder="Reconfirm Password" name="password" id="reconfirm-password"
+                    minlength="8"
+                    pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?!.* ).{6,}$"
+                    onchange="matchPassword()"
+                    title="Must have at least 6 characters, at least one upper case letter, at least one lower case letter, at least one number and one symbol"
+                    required>
 
                 <button class="button" type="submit">Submit</button>
                 <a href="../index.html">
@@ -32,5 +49,7 @@
 
         </form>
     </div>
-    </body>
+    <script src="../js/newUser.js"></script>
+</body>
+
 </html>
