Fixed try and catch, show error and email requirement

--- a/pages/newUser.html
+++ b/pages/newUser.html
@@ -15,8 +15,8 @@
 
             <div class="container">
                 <label for="username">Email</label>
-                <input type="text" placeholder="example@mail.com" name="email" id="email" pattern=".+@.+\.com"
-                    title="Must have an @ sign and a .com domain" required>
+                <input type="text" placeholder="example@mail.com" name="email" id="email" pattern=".+@.+\..+"
+                    title="Must have an @ sign" required>
 
                 <label for="username">Username</label>
                 <input type="text" placeholder="Enter Username" name="username" id="username"
