--- a/pages/newUser.html
+++ b/pages/newUser.html
@@ -49,6 +49,7 @@
 
         </form>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <script src="../js/newUser.js"></script>
 </body>
 
