--- a/pages/newUser.html
+++ b/pages/newUser.html
@@ -49,7 +49,8 @@
 
         </form>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
+    <script src="../bower_components/jakubzapletal-crypto-js/src/core.js"></script>
+    <script src="../bower_components/jakubzapletal-crypto-js/src/sha1.js"></script>
     <script src="../js/newUser.js"></script>
 </body>
 
