Trying to export encryption function
Failing to make functional index.js

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
                 <button type="button" class="button" onclick="hideBtn()" >Cancel</button>
         </form>
     </div>
-    <script src="src/index.js"></script>
+    <script type="module" src="src/index.js"></script>
 </body>
 </html>
