--- a/pages/newUser.html
+++ b/pages/newUser.html
@@ -51,7 +51,7 @@
     </div>
     <script src="../bower_components/jakubzapletal-crypto-js/src/core.js"></script>
     <script src="../bower_components/jakubzapletal-crypto-js/src/sha1.js"></script>
-    <script src="../js/newUser.js"></script>
+    <script type="module" src="../js/newUser.js"></script>
 </body>
 
 </html>
